layout issue fixed plus greener tech stack icons

--- a/src/style.css
+++ b/src/style.css
@@ -476,18 +476,18 @@ main .boxstyle-1 {
   margin-bottom: 20px;
 }
 
-main .boxstyle-2 {
+section .boxstyle-2 {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
   background: rgba(92, 241, 204, 0.2);
   border: 1px rgba(255, 255, 255, 0.3) dashed;
-  margin-bottom: 10px;
+  margin: 10px;
   -webkit-box-align: right;
       -ms-flex-align: right;
           align-items: right;
-  padding: 0px;
-  width: 100%;
+  padding: 30px;
+  width: 98%;
   border-radius: 0 35px;
 }
 
@@ -831,7 +831,7 @@ aside#aside1 .flexrow {
 }
 
 .icon-color {
-  color: #9fd6bd;
+  color: #99e5c3;
   margin: 0 8px 8px 0;
 }
 
@@ -1253,7 +1253,7 @@ main p, section p {
     -ms-grid-column-span: 2;
     grid-column: 3 / 5;
     font-size: 1.2em;
-    line-height: 150%;
+    line-height: 140%;
   }
   aside#aside1 h2 {
     font-size: 2.0em;
@@ -1372,8 +1372,8 @@ main p, section p {
     -ms-grid-column: 3;
     -ms-grid-column-span: 2;
     grid-column: 3 / 5;
-    font-size: 1.3em;
-    line-height: 150%;
+    font-size: 1.25em;
+    line-height: 145%;
   }
   aside#aside1 h2 {
     font-size: 2.2em;
